fix: snackbar text early wrapping in mobile devices

--- a/style.css
+++ b/style.css
@@ -168,6 +168,7 @@ body {
   left: 50%;
   transform: translateX(-50%);
   padding: .7rem 1rem;
+  width: fit-content;
   border-radius: .25rem;
   background-color: var(--dark-grayish-blue);
   font-weight: normal;
